force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Is_are_animal_s_likely_to_be__c.field-meta.xml
<CustomField>
    <fullName>aos_Is_are_animal_s_likely_to_be__c</fullName>
    <label>Is/are animal/s likely to be aggressive?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>