force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Is_Owner_Aware__c.field-meta.xml
<CustomField>
    <fullName>aos_Is_Owner_Aware__c</fullName>
    <label>Is Owner Aware?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>