force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Is_the_animal_frightened__c.field-meta.xml
<CustomField>
    <fullName>aos_Is_the_animal_frightened__c</fullName>
    <label>Is the animal frightened?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>