force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Is_there_access_to_food_and_or_water__c.field-meta.xml
<CustomField>
    <fullName>aos_Is_there_access_to_food_and_or_water__c</fullName>
    <inlineHelpText>Can you see if there is any available food and/or water?</inlineHelpText>
    <label>Is there access to food and/or water?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>