force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Kept_in_inappropriate_living__c.field-meta.xml
<CustomField>
    <fullName>aos_Kept_in_inappropriate_living__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kept in inappropriate living conditions</label>
    <type>Checkbox</type>
</CustomField>