force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Last_provided_food_or_water__c.field-meta.xml
<CustomField>
    <fullName>aos_Last_provided_food_or_water__c</fullName>
    <inlineHelpText>When did you last see any person provide food/water to the animal.</inlineHelpText>
    <label>Last provided food or water</label>
    <type>Date</type>
</CustomField>