force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Living_conditions__c.field-meta.xml
<CustomField>
    <fullName>aos_Living_conditions__c</fullName>
    <inlineHelpText>Are the animals kept in dirty or inappropriate living conditions (applicable to all animal types)</inlineHelpText>
    <label>Living conditions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>