force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Make_and_model__c.field-meta.xml
<CustomField>
    <fullName>aos_Make_and_model__c</fullName>
    <label>Make and model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>