force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Number_of_Animals_Confined__c.field-meta.xml
<CustomField>
    <fullName>aos_Number_of_Animals_Confined__c</fullName>
    <label># of Animals Confined</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>