force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Number_of_Deceased_Animals__c.field-meta.xml
<CustomField>
    <fullName>aos_Number_of_Deceased_Animals__c</fullName>
    <label># of Deceased Animals</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>