force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Offender_is_responsible_for_animal__c.field-meta.xml
<CustomField>
    <fullName>aos_Offender_is_responsible_for_animal__c</fullName>
    <inlineHelpText>Can you state if the person you are reporting is the owner or a person responsible for the current care of the animal/s or other?</inlineHelpText>
    <label>Offender is responsible for animal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>