force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Other_behaviour__c.field-meta.xml
<CustomField>
    <fullName>aos_Other_behaviour__c</fullName>
    <inlineHelpText>Describe the animal/s behaviour eg lethargic, down, distressed, active</inlineHelpText>
    <label>Other behaviour</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>