force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Other_Cause_of_Affliction__c.field-meta.xml
<CustomField>
    <fullName>aos_Other_Cause_of_Affliction__c</fullName>
    <label>Other (Cause of Affliction)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>