force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Other_tether_confinement_reason__c.field-meta.xml
<CustomField>
    <fullName>aos_Other_tether_confinement_reason__c</fullName>
    <label>Other tether/confinement reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>