force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Other_tether_type__c.field-meta.xml
<CustomField>
    <fullName>aos_Other_tether_type__c</fullName>
    <inlineHelpText>Please describe the type of tether</inlineHelpText>
    <label>Other tether type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>