force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Other_witness_s__c.field-meta.xml
<CustomField>
    <fullName>aos_Other_witness_s__c</fullName>
    <label>Other witness&apos;s</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>