force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Owner_s_Location__c.field-meta.xml
<CustomField>
    <fullName>aos_Owner_s_Location__c</fullName>
    <label>Owner&apos;s Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>