force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Owners_last_seen__c.field-meta.xml
<CustomField>
    <fullName>aos_Owners_last_seen__c</fullName>
    <inlineHelpText>When did they vacate or when last seen at the property?</inlineHelpText>
    <label>Owners last seen</label>
    <type>Date</type>
</CustomField>