force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Owners_vacated__c.field-meta.xml
<CustomField>
    <fullName>aos_Owners_vacated__c</fullName>
    <inlineHelpText>Have the owners vacated the premises permanently or on holidays?</inlineHelpText>
    <label>Owners vacated?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanently</fullName>
            </value>
            <value>
                <fullName>Temporarily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>