force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Past_incident_details__c.field-meta.xml
<CustomField>
    <fullName>aos_Past_incident_details__c</fullName>
    <label>Past incident details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>