force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Reason_for_tether_confinement__c.field-meta.xml
<CustomField>
    <fullName>aos_Reason_for_tether_confinement__c</fullName>
    <label>Reason for tether/confinement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No fencing</fullName>
            </value>
            <value>
                <fullName>Inadequate fencing</fullName>
            </value>
            <value>
                <fullName>Dog is known to escape</fullName>
            </value>
            <value>
                <fullName>Other - please specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>