force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Registration_number__c.field-meta.xml
<CustomField>
    <fullName>aos_Registration_number__c</fullName>
    <label>Registration number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>