force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Reporter_observed_incident__c.field-meta.xml
<CustomField>
    <fullName>aos_Reporter_observed_incident__c</fullName>
    <inlineHelpText>Did you personally observe the incident?</inlineHelpText>
    <label>Reporter observed incident</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>