force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Rescue_Type__c.field-meta.xml
<CustomField>
    <fullName>aos_Rescue_Type__c</fullName>
    <label>Rescue Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assistance Request - Animal Owner</fullName>
            </value>
            <value>
                <fullName>Assistance Request - HEA Bequest</fullName>
            </value>
            <value>
                <fullName>Assistance Request - Inspectorate</fullName>
            </value>
            <value>
                <fullName>Assistance Request - Provide Emergency Relief</fullName>
            </value>
            <value>
                <fullName>Assistance Request - Shelter</fullName>
            </value>
            <value>
                <fullName>Dog/cat Attack</fullName>
            </value>
            <value>
                <fullName>Emergency - Fire Event</fullName>
            </value>
            <value>
                <fullName>Emergency - Flood Event</fullName>
            </value>
            <value>
                <fullName>Emergency - Heat Related</fullName>
            </value>
            <value>
                <fullName>Emergency - Oiled Wildlife</fullName>
            </value>
            <value>
                <fullName>Entanglement - Fishing Line</fullName>
            </value>
            <value>
                <fullName>Entanglement - Other</fullName>
            </value>
            <value>
                <fullName>Hit By Car</fullName>
            </value>
            <value>
                <fullName>Injured</fullName>
            </value>
            <value>
                <fullName>Orphaned Juvenile</fullName>
            </value>
            <value>
                <fullName>Pouch Check</fullName>
            </value>
            <value>
                <fullName>Rescue - at Height</fullName>
            </value>
            <value>
                <fullName>Rescue - Livestock</fullName>
            </value>
            <value>
                <fullName>Rescue - Roof Cavity</fullName>
            </value>
            <value>
                <fullName>Rescue - Special Request</fullName>
            </value>
            <value>
                <fullName>Sick/ Illness</fullName>
            </value>
            <value>
                <fullName>Transport - Non animal</fullName>
            </value>
            <value>
                <fullName>Trapped - Bird in Building</fullName>
            </value>
            <value>
                <fullName>Trapped - Drain Rescue</fullName>
            </value>
            <value>
                <fullName>Trapped - in Water</fullName>
            </value>
            <value>
                <fullName>Trapped - Other</fullName>
            </value>
            <value>
                <fullName>Trapped - Stuck in Tree</fullName>
            </value>
            <value>
                <fullName>Vet Pick Up</fullName>
            </value>
            <value>
                <fullName>Wildlife - Displaced/ Sighting</fullName>
            </value>
            <value>
                <fullName>Wildlife - Release</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>