force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Responsible_person_of_property__c.field-meta.xml
<CustomField>
    <fullName>aos_Responsible_person_of_property__c</fullName>
    <inlineHelpText>Do you know who manages the property, real estate, strata/body corporate, housing NSW or private?</inlineHelpText>
    <label>Responsible person of property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>