force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Self_mutilating__c.field-meta.xml
<CustomField>
    <fullName>aos_Self_mutilating__c</fullName>
    <label>Self mutilating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>