force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Signs_of_distress__c.field-meta.xml
<CustomField>
    <fullName>aos_Signs_of_distress__c</fullName>
    <inlineHelpText>Is the animal distressed, pacing, self-mutilating etc..?</inlineHelpText>
    <label>Signs of distress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>