force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Size_of_confinement__c.field-meta.xml
<CustomField>
    <fullName>aos_Size_of_confinement__c</fullName>
    <inlineHelpText>How large do you estimate the pen/cage to be?</inlineHelpText>
    <label>Size of confinement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Too small for animal/s</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Large enough for animal/s</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>