force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Submitted__c.field-meta.xml
<CustomField>
    <fullName>aos_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted</label>
    <type>Checkbox</type>
</CustomField>