force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Tether_length__c.field-meta.xml
<CustomField>
    <fullName>aos_Tether_length__c</fullName>
    <inlineHelpText>How long do you estimate the tether to be in meters? E.g 0.5m (50cm), 25m, 200m etc</inlineHelpText>
    <label>Tether length</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 1m</fullName>
            </value>
            <value>
                <fullName>2m-4m</fullName>
            </value>
            <value>
                <fullName>5m-10m</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>