force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Tether_type__c.field-meta.xml
<CustomField>
    <fullName>aos_Tether_type__c</fullName>
    <label>Tether type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chain</fullName>
            </value>
            <value>
                <fullName>Rope</fullName>
            </value>
            <value>
                <fullName>Dog lead</fullName>
            </value>
            <value>
                <fullName>Runner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>