force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Tethered_confined_duration__c.field-meta.xml
<CustomField>
    <fullName>aos_Tethered_confined_duration__c</fullName>
    <inlineHelpText>How long do you believe the animal/s has been tethered or confined</inlineHelpText>
    <label>Tethered/confined duration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 24hrs</fullName>
            </value>
            <value>
                <fullName>24-48hrs</fullName>
            </value>
            <value>
                <fullName>72hrs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>