force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Tied_continuously_or_locked__c.field-meta.xml
<CustomField>
    <fullName>aos_Tied_continuously_or_locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tied continuously or locked</label>
    <type>Checkbox</type>
</CustomField>