force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Type_of_shelter__c.field-meta.xml
<CustomField>
    <fullName>aos_Type_of_shelter__c</fullName>
    <label>Type of shelter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kennel</fullName>
            </value>
            <value>
                <fullName>Under house</fullName>
            </value>
            <value>
                <fullName>Patio/veranda/carport</fullName>
            </value>
            <value>
                <fullName>Overhang of balcony</fullName>
            </value>
            <value>
                <fullName>Tree</fullName>
            </value>
            <value>
                <fullName>No available shelter, natural or otherwise</fullName>
            </value>
            <value>
                <fullName>Trees/forested area</fullName>
            </value>
            <value>
                <fullName>Free standing shelter i.e lean to</fullName>
            </value>
            <value>
                <fullName>Hutch</fullName>
            </value>
            <value>
                <fullName>Aviary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>