force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Type_of_Shelter_Other__c.field-meta.xml
<CustomField>
    <fullName>aos_Type_of_Shelter_Other__c</fullName>
    <label>Type of Shelter - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>