force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_TypeUndef__c.field-meta.xml
<CustomField>
    <fullName>aos_TypeUndef__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Update on 5/10/2023 was completed to Type via Record Type</description>
    <label>TypeUndef</label>
    <type>Checkbox</type>
</CustomField>