force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Updated__c.field-meta.xml
<CustomField>
    <fullName>aos_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated</label>
    <type>Checkbox</type>
</CustomField>