force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Urgent_attention_required__c.field-meta.xml
<CustomField>
    <fullName>aos_Urgent_attention_required__c</fullName>
    <label>Urgent attention required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>