force-app/main/default/objects/animalos__Animal_Report__c/fields/aos_Water_source__c.field-meta.xml
<CustomField>
    <fullName>aos_Water_source__c</fullName>
    <label>Water source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trough</fullName>
            </value>
            <value>
                <fullName>Dam</fullName>
            </value>
            <value>
                <fullName>Natural water course</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>