force-app/main/default/objects/animalos__Animal_Report__c/recordTypes/aos_Bird.recordType-meta.xml
<RecordType>
    <fullName>aos_Bird</fullName>
    <active>true</active>
    <description>Used to capture details about bird/s that have been reported to RSPCA.</description>
    <label>Bird</label>
</RecordType>