force-app/main/default/objects/animalos__Animal_Report__c/recordTypes/aos_Cat.recordType-meta.xml
<RecordType>
    <fullName>aos_Cat</fullName>
    <active>true</active>
    <description>Used to capture details about cat/s that have been reported to RSPCA.</description>
    <label>Cat</label>
</RecordType>