force-app/main/default/objects/animalos__Animal_Report__c/recordTypes/aos_Dog.recordType-meta.xml
<RecordType>
    <fullName>aos_Dog</fullName>
    <active>true</active>
    <description>Used to capture details about dog/s that have been reported to RSPCA.</description>
    <label>Dog</label>
</RecordType>