force-app/main/default/objects/animalos__Animal_Report__c/recordTypes/aos_General.recordType-meta.xml
<RecordType>
    <fullName>aos_General</fullName>
    <active>true</active>
    <label>General</label>
</RecordType>