force-app/main/default/objects/animalos__Animal_Report__c/recordTypes/aos_Livestock.recordType-meta.xml
<RecordType>
    <fullName>aos_Livestock</fullName>
    <active>true</active>
    <description>Used to capture details about livestock that have been reported to RSPCA.</description>
    <label>Livestock</label>
</RecordType>