force-app/main/default/objects/animalos__Animal_Report__c/recordTypes/aos_Other.recordType-meta.xml
<RecordType>
    <fullName>aos_Other</fullName>
    <active>true</active>
    <label>Other</label>
</RecordType>