force-app/main/default/objects/animalos__Animal_Report__c/recordTypes/aos_Pocket_Pet.recordType-meta.xml
<RecordType>
    <fullName>aos_Pocket_Pet</fullName>
    <active>true</active>
    <description>Used to capture details about Rabbit/Guinea Pig/s that have been reported to RSPCA.</description>
    <label>Pocket Pet</label>
</RecordType>