force-app/main/default/objects/animalos__Animal_Report__c/recordTypes/aos_Poultry.recordType-meta.xml
<RecordType>
    <fullName>aos_Poultry</fullName>
    <active>true</active>
    <description>Used to capture details about poultry that have been reported to RSPCA.</description>
    <label>Poultry</label>
</RecordType>