force-app/main/default/objects/animalos__Animal_Report__c/listViews/animalos__All_Reports.listView-meta.xml
<ListView>
    <fullName>animalos__All_Reports</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Reports</label>
</ListView>